2005-09-22  Sven Neumann  <sven@gimp.org>

	* INSTALL
	* configure.in: added a check for libgnomeprintui.

	* plug-ins/common/gnomeprint.c: added a simple Print plug-in that
	uses libgnomeprint and libgnomeprintui. Needs more work.

	* plug-ins/common/plugin-defs.pl: added the new plug-in.

	* plug-ins/common/Makefile.am: regenerated.

2005-09-22  DindinX  <dindinx@gimp.org>

	* libgimpwidgets/gimpzoommodel.c: renamed the properties "value",
	"minimum" and "maximum".

	* libgimp/gimpzoompreview.c: modified accordingly.

2005-09-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: canonicalize procedure name and parameters.

2005-09-22  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/compose.c: reorganized and cleaned up GUI and code.

2005-09-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/psd.c
	* plug-ins/common/psd_save.c: don't hardcode unit conversion factors.

2005-09-21  Jay Cox  <jaycox@gimp.org>

	* plug-ins/common/psd.c: Load the resolution properly when it is
	specified in px/cm.
	* plug-ins/common/psd_save.c: Save the resolution of the image in
	the file.  Fixes bug #310426
	
2005-09-21  Sven Neumann  <sven@gimp.org>

	* HACKING: minor update.

2005-09-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/spheredesigner.c: update the preview from an
	idle handler. Removed obsolete "Update Preview" button.

2005-09-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/spheredesigner.c: more compact dialog layout,
	renamed "Textures" to "Layers" and make sure that one is always
	selected.

2005-09-21  Michael Natterer  <mitch@gimp.org>

	Separated the global buffer logic from the clipboard
	implementation:

	* app/widgets/gimpclipboard.[ch]: removed all knowledge about
	gimp->global_buffer. Removed the Gimp::buffer-changed callback.
	Made gimp_clipboard_set_buffer() public and remember the set
	buffer in the GimpClipboard struct. Fixed the has_buffer() and
	has_svg() functions.
